[package]
name = "lotus3"
version = "0.1.0"
authors = ["Oleg Scherbakov <scherbakov.oleg@gmail.com>"]
edition = "2021"

[dependencies]
eyre = "0.6.5"
color-eyre = { version = "0.5.11", default-features = false }
pixels = "0.8"
winit = { version = "0.25", default-features = false, features = ["x11"] }
winit_input_helper = "0.10"
wgpu = "0.11"

[dev-dependencies]
md5 = "0.6.0"
