[package]
name = "lotus3"
version = "0.1.0"
authors = ["Oleg Scherbakov <scherbakov.oleg@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
enum_dispatch = "0.3"
pixels = "0.8"
wgpu = "0.11"
winit = { version = "0.25", default-features = false, features = ["x11"] }
winput = { package = "winit_input_helper", version = "0.10" }

[dev-dependencies]
md5 = "0.6.0"
